src/App.css
/* lightest blue 169, 211,255 */
/* blue 150, 197, 187 */
/* kinda grey 147, 172, 182 */

.navBar {
  width:100%;
  text-align: left;
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  min-width: 350px;
}
footer {
  color: grey;
  margin-top: 0;
}

footer a {
  color: rgba(0, 0, 255, 0.377)
}
h1 {
  text-align: left;
  border-bottom: solid black;
  margin-left: 1%;
  margin-right: 1%; 
}

.navItems {
  margin: 20px;
  border-radius: 5px;
  min-width: 350px;
  align-items: center;
  flex-flow: row nowrap;
}

.navItems .link {
  padding-left: 10%;
  padding-right: 10%;
  padding-top: 10px;
  padding-bottom:10px;
  margin-left: 3%;
  margin-right:3%;
  border-radius: 5px;
  flex-flow: row;
  align-items: center;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.navItems .link:hover{
  background-color: rgb(169, 211,255)
}

.subnav .link{
  padding-left: 10%;
  padding-right: 10%;
  padding-top: 10px;
  padding-bottom:10px;
  margin-left: 3%;
  margin-right:3%;
  margin-bottom: 50px;
  border-radius: 5px;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.subnav .link:hover{
  background-color: rgb(169, 211,255);
}

.artist {
  width: 100%;
  min-height: 100vh;
  margin-left:5%;
  margin-right:10%;
  text-align: left;
}
.contact {
  width: 100%;
  min-height: 100vh;

}
.App {
  text-align: center;
  background-color: rgb(147, 172, 182)
}
.works-container {
  width: 100%;
  min-height: 100vh;
  margin-top:50px;
}

.imageContainer {
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  align-items: flex-start;
  align-content: space-around;
  margin-left: 40px;
}

.img {
  width:30%;
  margin: 10px;
  height:auto;
}

.socials {
  width:100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
}

.social-card {
  flex-flow: row nowrap;
  align-items: center;
  justify-content: center;
  text-align: center;
  width: 10%;
}


@media only screen 
  and (max-device-width: 320px) {
    .navItems .link {
      padding-left: 7%;
      padding-right: 7%;
      padding-top: 10px;
      padding-bottom:10px;
    }
    .subnav {
      display: flex;
      flex-flow: column nowrap;
    }
  }

